write handlers + swagger comments
