# docs/swagger.yaml
@@ -427,6 +427,41 @@ paths:
       summary: Register a new user
       tags:
       - User
+  /api/v1/sms/agents/agentId:
+    post:
+      consumes:
+      - application/json
+      description: Returns list of sms
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: SMS status details
+          schema:
+            items:
+              $ref: '#/definitions/model.SmsResponse'
+            type: array
+        "400":
+          description: Invalid request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: get sms sent to user
+      tags:
+      - SMS
   /api/v1/sms/list:
     get:
       consumes:
